Nuevas funcionalidades, guardado en el MongoDB, cambios de dependencias en general
